k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: demo-app
  namespace: portfolio
  
spec:
  replicas: 3
  
  selector:
    matchLabels:
      app: demo-app
      
  template:
    metadata:
      labels:
        app: demo-app
        
    spec:
      containers:
      - name: app
        image: YOUR_DOCKER_IMAGE
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
