k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: demo-app-service
  namespace: portfolio

spec:
  type: LoadBalancer

  selector:
    app: demo-app

  ports:
  - port: 80
    targetPort: 3000
